2000-04-30  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/e-card.c: Make file as not have the : after it if
	it's empty.  If there's no name, or file_as, fill in these fields
	with defaults based on full_name or name respectively.

	* backend/ebook/load-pine-addressbook.c: New file to do import of
	pine .addressbook files.

	* backend/pas/pas-backend-file.c: Made empty fields act as the
	empty string for searches.

	* contact-editor/e-contact-editor.c,
	contact-editor/e-contact-editor.h: Made the File As field update
	properly as you edit the name and company fields.  Added the pull
	down list of File As choices.  Made sure that all fields will
	be set to NULL if they are deleted to the empty string.

	* gui/minicard/e-minicard.c: Use the File As field instead of the
	Full Name field for the header.  Make identical compares on the
	File As field do a compare on the uid.

2000-04-30  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/e-contact-editor-fullname.c,
	contact-editor/fullname.glade: Fixed a string mismatch.

2000-04-30  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/Makefile.am: Added ename includes and libs.

	* backend/ebook/e-card.c, backend/ebook/e-card.h: Added
	e_card_name_from_string.  Added header for
	e_card_delivery_address_from_string, even though it's not
	implemented yet.

	* contact-editor/Makefile.am: Removed the ename includes since we
	no longer use ename directly here.

	* contact-editor/e-contact-editor.c: Fixed this to properly save
	the address labels displayed.  Updated this to use the function
	e_card_name_from_string instead of doing it by hand.

	* contact-editor/fullname-strings.h,
	contact-editor/fullname.glade: Deleted an unused field.  Changed
	the set of prefixes and suffixes.

2000-04-30  Chris Toshok  <toshok@helixcode.com>

	* backend/pas/pas-backend-ldap.c
	(pas_backend_ldap_ensure_connected): add support for a rootdn in
	the uri.