@@ -453,6 +453,7 @@
 	<widget>
 	  <class>GtkCheckButton</class>
 	  <name>checkbutton-mailingaddress</name>
+	  <visible>False</visible>
 	  <can_focus>True</can_focus>
 	  <label>This is the mailing address</label>
 	  <active>False</active>
@@ -930,6 +931,7 @@
 	<widget>
 	  <class>GtkCheckButton</class>
 	  <name>checkbutton-htmlmail</name>
+	  <visible>False</visible>
 	  <can_focus>True</can_focus>
 	  <label>Wants HTML mail</label>
 	  <active>False</active>
